# adrowse

./: Cargo.toml
.github/workflows/: release.yml
docs/decisions/: 00001-naming.md  00002-rust.md  00003-template.md  00004-i18n.md  00005-cross-compile.md  00006-template-option.md  00007-cicd.md  00008-nixpkg.md  00009-cargo.md  00010-license.md
scripts/: template-import.py
src/: main.rs
